# vulkan-compute-exercises

./: CMakeLists.txt  README.md
00_MyGPU/: CMakeLists.txt  main.cpp
01_HelloGPU/: CMakeLists.txt  main.cpp
01_HelloGPU/shaders/: a.spv  hello.comp  hello.hlsl
02_UniformBuffer/: CMakeLists.txt  main.cpp
02_UniformBuffer/shaders/: print.comp
03_StorageBuffer/: CMakeLists.txt  main.cpp
03_StorageBuffer/shaders/: fibonacci.comp
04_Copying/: CMakeLists.txt  main.cpp
05_EdgeDetector/: CMakeLists.txt  main.cpp
05_EdgeDetector/shaders/: sobel.comp
06_Atomics/: CMakeLists.txt  main.cpp
06_Atomics/shaders/: primes.comp
07_PointCloudRender/: CMakeLists.txt  main.cpp
07_PointCloudRender/shaders/: pointcloud.comp
08_SharedMemory/: CMakeLists.txt  main.cpp
08_SharedMemory/shaders/: communicate.comp
09_MatrixMultiplication/: CMakeLists.txt  main.cpp
09_MatrixMultiplication/shaders/: matrixmult.comp
10_Reduction/: CMakeLists.txt  main.cpp
10_Reduction/shaders/: reduce.comp
11_StagingBuffer/: CMakeLists.txt  main.cpp
11_StagingBuffer/shaders/: reduce_sequential.comp
assets/: desktop.ini
framework/: CMakeLists.txt  framework.cpp  framework.h
